--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg_provider: ^0.1.8
-  firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+5
+  firebase_core: ^0.5.0+1
+  firebase_auth: ^0.18.0 
+  cloud_firestore: 0.14.2 
 
 dev_dependencies:
   flutter_test:
