--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^0.5.0+1
   firebase_auth: ^0.18.0 
   cloud_firestore: 0.14.2 
+  image_picker: ^0.6.7+22
 
 dev_dependencies:
   flutter_test:
