--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   firebase_analytics: ^5.0.2
   firebase_core: ^0.5.0+1
   firebase_auth: ^0.18.0 
-  cloud_firestore: 0.14.2 
+  cloud_firestore: 0.14.2
+  firebase_storage: ^5.0.0 
   image_picker: ^0.6.7+22
+
 
 dev_dependencies:
   flutter_test:
