--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cloud_firestore: 0.14.2
   firebase_storage: ^5.0.0 
   image_picker: ^0.6.7+22
+  cached_network_image: ^2.5.0
 
 
 dev_dependencies:
