--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   firebase_storage: ^5.0.0 
   image_picker: ^0.6.7+22
   cached_network_image: ^2.5.0
+  camera: ^0.7.0
+  path: ^1.8.0
+  path_provider: ^1.1.0
+  esys_flutter_share: ^1.0.2
 
 
 dev_dependencies:
@@ -57,7 +61,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
-
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
